<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.sander.guardmanagement.ui.activity.IntroductionGuradActivity"
    android:fitsSystemWindows="true">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:id="@+id/imagetextcenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_marginBottom="10dp" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/introduction_login_button"
            android:background="@drawable/shape"
            android:textColor="@color/colorThemeButtonText"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
        <Button
            android:id="@+id/hezuobutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/introduction_hezuo_button"
            android:background="@drawable/shape"
            android:textColor="@color/colorThemeButtonText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </LinearLayout>

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:fitsSystemWindows="true">-->
    <!--</FrameLayout>-->

</FrameLayout>
