<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ThemeAppBackgroupColor"
    android:fitsSystemWindows="true"
    tools:context="com.sander.guardmanagement.ui.activity.AppSettingActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/AppTopNavbarColor"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="64dp">
            <FrameLayout
                android:id="@+id/callbackLayout"
                android:layout_width="40dp"
                android:layout_height="64dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_title"
                android:layout_centerInParent="true"
                android:textSize="20dp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/account_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="137000088888"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textSize="20dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:layout_marginTop="10dp"></View>

        <RelativeLayout
            android:id="@+id/peopleinforelativelayout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="10dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_people_info"
                android:textSize="20dp"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_alignParentBottom="true"></View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/changepassworldlativelayout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="10dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changepassworld"
                android:textSize="20dp"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_alignParentBottom="true"></View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/callbaclinforelativelayout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feadbackmygreen"
                android:textSize="20dp"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_alignParentBottom="true"></View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/auto_update"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:id="@+id/auto_update_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_update"
                android:textSize="20dp"
                android:layout_centerVertical="true"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_alignParentBottom="true"></View>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/versionlayout"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginLeft="10dp"
            >
            <TextView
                android:id="@+id/versiontextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_string"
                android:textSize="20dp"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/siginoutbutton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/white_text_selector"
            android:text="退出"
            android:textSize="20dp"/>

    </RelativeLayout>

</LinearLayout>
